# fast-todo

./: database.py  fast_todo.db  main.py  model.py  pyproject.toml  routers.py
configs/: __init__.py  entitybase.py  store.py
entities/: __init__.py  todos.py  users.py
mappers/: __init__.py  entities.py  models.py
models/: __init__.py  todos.py
presentation/: __init__.py
presentation/api/: __init__.py
presentation/api/routers/: __init__.py  todos.py
presentation/web/: __init__.py
presentation/web/routers/: __init__.py  todos.py
presentation/web/templates/: _head.html.jinja  base.html.jinja
presentation/web/templates/views/: home.html.jinja
services/: flash.py
usecases/: __init__.py  todos.py
